# Diarizacion_diputados

./: README.md  pyproject.toml
diarizacion_pipeline/: Creador_embeddings.py  Diarizador.py  Matcher_speakers.py  utils.py
notebooks/: creacion_embeddings_example.ipynb  matching_embeddins_example.ipynb
