[project]
name = "diarizacion_pipeline"
version = "0.1.0"
description = "Pipeline para transcribir videos de youtube, con predicción de turnos de habla e identificacion de hablantes conocidos"
authors = [
    {name = "Matías Miranda",email = "matias.miranda.c@ug.uchile.cl"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.15)",
    "aiosignal (==1.4.0)",
    "alembic (==1.16.5)",
    "antlr4-python3-runtime (==4.9.3)",
    "asteroid-filterbanks (==0.4.0)",
    "attrs (==25.3.0)",
    "av (==15.1.0)",
    "certifi (==2025.10.5)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.3)",
    "click (==8.3.0)",
    "colorama (==0.4.6)",
    "coloredlogs (==15.0.1)",
    "colorlog (==6.9.0)",
    "contourpy (==1.3.3)",
    "ctranslate2 (==4.4.0)",
    "cycler (==0.12.1)",
    "defusedxml (==0.7.1)",
    "docopt (==0.6.2)",
    "einops (==0.8.1)",
    "faster-whisper (==1.2.0)",
    "filelock (==3.19.1)",
    "flatbuffers (==25.9.23)",
    "fonttools (==4.60.1)",
    "frozenlist (==1.7.0)",
    "fsspec (==2025.9.0)",
    "greenlet (==3.2.4)",
    "huggingface-hub (==0.35.3)",
    "humanfriendly (==10.0)",
    "hyperpyyaml (==1.2.2)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.2)",
    "julius (==0.2.7)",
    "kiwisolver (==1.4.9)",
    "lightning (==2.5.5)",
    "lightning-utilities (==0.15.2)",
    "mako (==1.3.10)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.6)",
    "mdurl (==0.1.2)",
    "mpmath (==1.3.0)",
    "multidict (==6.6.4)",
    "networkx (==3.5)",
    "nltk (==3.9.2)",
    "numpy",
    "omegaconf (==2.3.0)",
    "onnxruntime (==1.23.0)",
    "optuna (==4.5.0)",
    "packaging (==25.0)",
    "pandas",
    "pillow (==11.3.0)",
    "primepy (==1.3)",
    "propcache (==0.4.0)",
    "protobuf (==4.25.3)",
    "pyannote-audio (==3.4.0)",
    "pyannote-core (==5.0.0)",
    "pyannote-database",
    "pyannote-metrics",
    "pyannote-pipeline (==3.0.1)",
    "pycparser (==2.23)",
    "pydub (==0.25.1)",
    "pygments (==2.19.2)",
    "pyparsing (==3.2.5)",
    "pyreadline3 (==3.5.4)",
    "python-dateutil (==2.9.0.post0)",
    "pytorch-lightning (==2.5.5)",
    "pytorch-metric-learning (==2.9.0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "regex (==2025.9.18)",
    "requests (==2.32.5)",
    "rich (==14.1.0)",
    "ruamel-yaml (==0.18.15)",
    "ruamel-yaml-clib (==0.2.14)",
    "safetensors (==0.6.2)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.2)",
    "semver (==3.0.4)",
    "sentencepiece (==0.2.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sortedcontainers (==2.4.0)",
    "soundfile (==0.13.1)",
    "speechbrain (==1.0.3)",
    "sqlalchemy (==2.0.43)",
    "sympy (==1.14.0)",
    "tabulate (==0.9.0)",
    "tensorboardx (==2.6.4)",
    "threadpoolctl (==3.6.0)",
    "tokenizers (==0.22.1)",
    "torch (==2.8.0)",
    "torch-audiomentations (==0.12.0)",
    "torch-pitch-shift (==1.2.5)",
    "torchaudio (==2.8.0)",
    "torchmetrics (==1.8.2)",
    "tqdm (==4.67.1)",
    "transformers (==4.57.0)",
    "typer (==0.19.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "whisperx @ git+https://github.com/m-bain/whisperX.git@b1c8ac7de62c5969343352f2d10a31ebe5a107fd",
    "yarl (==1.20.1)",
    "youtube-transcript-api (==1.2.2)",
    "yt-dlp (==2025.9.26)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"